unpackaged/main/default/objects/membership__c/membership__c.object-meta.xml
<CustomObject>
    <label>Membership</label>
    <nameField>
        <label>Membership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>