unpackaged/main/default/objects/membership__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <label>Association</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BVH</fullName>
                <label>Discount 30% (BVH)</label>
            </value>
            <value>
                <fullName>ROCKET_INTERNET</fullName>
                <label>Discount 30% (ROCKET_INTERNET)</label>
            </value>
            <value>
                <fullName>VSV</fullName>
                <label>Discount 30% (VSV)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>