unpackaged/main/default/objects/membership__c/fields/average_shopping_basket__c.field-meta.xml
<CustomField>
    <fullName>average_shopping_basket__c</fullName>
    <label>Average Shopping Basket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>