unpackaged/main/default/objects/membership__c/fields/certificate_disabled_by__c.field-meta.xml
<CustomField>
    <fullName>certificate_disabled_by__c</fullName>
    <label>Disabled by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>