unpackaged/main/default/objects/membership__c/fields/certificate_disabled_comment__c.field-meta.xml
<CustomField>
    <fullName>certificate_disabled_comment__c</fullName>
    <label>Disablement Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>