unpackaged/main/default/objects/membership__c/fields/certificate_disabled_reasons__c.field-meta.xml
<CustomField>
    <fullName>certificate_disabled_reasons__c</fullName>
    <label>Reason for certificate disablement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
            <value>
                <fullName>tbd3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>