unpackaged/main/default/objects/membership__c/fields/charged_at__c.field-meta.xml
<CustomField>
    <fullName>charged_at__c</fullName>
    <label>Charged At</label>
    <type>Date</type>
</CustomField>