unpackaged/main/default/objects/membership__c/fields/charged_until__c.field-meta.xml
<CustomField>
    <fullName>charged_until__c</fullName>
    <label>Charged Until</label>
    <type>DateTime</type>
</CustomField>