unpackaged/main/default/objects/membership__c/fields/contract_adjustment_at__c.field-meta.xml
<CustomField>
    <fullName>contract_adjustment_at__c</fullName>
    <label>Contract Adjustment At</label>
    <type>Date</type>
</CustomField>