unpackaged/main/default/objects/membership__c/fields/contracted_at__c.field-meta.xml
<CustomField>
    <fullName>contracted_at__c</fullName>
    <label>Contracted at</label>
    <type>DateTime</type>
</CustomField>