unpackaged/main/default/objects/membership__c/fields/conversion_rate__c.field-meta.xml
<CustomField>
    <fullName>conversion_rate__c</fullName>
    <label>Conversion Rate</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>