unpackaged/main/default/objects/membership__c/fields/count_shop_order_per_year__c.field-meta.xml
<CustomField>
    <fullName>count_shop_order_per_year__c</fullName>
    <label>Count Shop Order per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>