unpackaged/main/default/objects/membership__c/fields/csm_comment__c.field-meta.xml
<CustomField>
    <fullName>csm_comment__c</fullName>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>