unpackaged/main/default/objects/membership__c/fields/csm_state__c.field-meta.xml
<CustomField>
    <fullName>csm_state__c</fullName>
    <label>CSM State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>