unpackaged/main/default/objects/membership__c/fields/csm_state_changed_on__c.field-meta.xml
<CustomField>
    <fullName>csm_state_changed_on__c</fullName>
    <label>CSM StateChangedOn</label>
    <type>DateTime</type>
</CustomField>