unpackaged/main/default/objects/membership__c/fields/CSM_State_Number__c.field-meta.xml
<CustomField>
    <fullName>CSM_State_Number__c</fullName>
    <label>CSM State Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>