unpackaged/main/default/objects/membership__c/fields/days_active__c.field-meta.xml
<CustomField>
    <fullName>days_active__c</fullName>
    <formula>IF( ISBLANK(valid_to__c), NULL, valid_to__c - valid_from__c)</formula>
    <label>Days Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>