unpackaged/main/default/objects/membership__c/fields/euro_setup_fee_ecb__c.field-meta.xml
<CustomField>
    <fullName>euro_setup_fee_ecb__c</fullName>
    <formula>IF(ISBLANK(conversion_rate__c), setup_fee__c, setup_fee__c / conversion_rate__c)</formula>
    <label>Euro Setup Fee (ECB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>