unpackaged/main/default/objects/membership__c/fields/expected_turnover__c.field-meta.xml
<CustomField>
    <fullName>expected_turnover__c</fullName>
    <label>Expected Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>