unpackaged/main/default/objects/membership__c/fields/hasYearlyDiscount__c.field-meta.xml
<CustomField>
    <fullName>hasYearlyDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasYearlyDiscount</label>
    <type>Checkbox</type>
</CustomField>