unpackaged/main/default/objects/membership__c/fields/invoice_company__c.field-meta.xml
<CustomField>
    <fullName>invoice_company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Company (if different)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Memberships (Invoice Company)</relationshipLabel>
    <relationshipName>InvoiceAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>