unpackaged/main/default/objects/membership__c/fields/invoice_contact__c.field-meta.xml
<CustomField>
    <fullName>invoice_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Is Invoice Contact for Memberships</relationshipLabel>
    <relationshipName>InvoiceMemberships</relationshipName>
    <type>Lookup</type>
</CustomField>