unpackaged/main/default/objects/membership__c/fields/is_active__c.field-meta.xml
<CustomField>
    <fullName>is_active__c</fullName>
    <formula>IF( valid_from__c &lt;= TODAY() &amp;&amp;   (valid_to__c &gt;= TODAY() ||  ISBLANK(valid_to__c)) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is active</label>
    <type>Checkbox</type>
</CustomField>