unpackaged/main/default/objects/membership__c/fields/Is_lift_relevant__c.field-meta.xml
<CustomField>
    <fullName>Is_lift_relevant__c</fullName>
    <formula>IF( company_id__r.Min_1_Shop_has_SI__c &gt;0 &amp;&amp;  Zuora_Expected_Turnover__c &lt;  turnover_by_average_basket__c , true, 
 IF(company_id__r.Min_1_Shop_has_SI__c =0 &amp;&amp; Zuora_Expected_Turnover__c &lt; turnover_by_average_shopping_basket__c , true, false) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is lift relevant</label>
    <type>Checkbox</type>
</CustomField>