unpackaged/main/default/objects/membership__c/fields/is_turnover_member__c.field-meta.xml
<CustomField>
    <fullName>is_turnover_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Order Member</label>
    <type>Checkbox</type>
</CustomField>