unpackaged/main/default/objects/membership__c/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>tbd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>