unpackaged/main/default/objects/membership__c/fields/Last_lift_case_more_than_365_days_ago__c.field-meta.xml
<CustomField>
    <fullName>Last_lift_case_more_than_365_days_ago__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last lift case during last 365 days</label>
    <type>Checkbox</type>
</CustomField>