unpackaged/main/default/objects/membership__c/fields/last_lift_case_opened__c.field-meta.xml
<CustomField>
    <fullName>last_lift_case_opened__c</fullName>
    <label>last lift case opened</label>
    <type>Date</type>
</CustomField>