unpackaged/main/default/objects/membership__c/fields/Lift_forecast_value__c.field-meta.xml
<CustomField>
    <fullName>Lift_forecast_value__c</fullName>
    <formula>IF( company_id__r.Min_1_Shop_has_SI__c &gt;0 &amp;&amp; Zuora_Expected_Turnover__c &lt; turnover_by_average_basket__c , turnover_by_average_basket__c,
IF(company_id__r.Min_1_Shop_has_SI__c =0 &amp;&amp; Zuora_Expected_Turnover__c &lt; turnover_by_average_shopping_basket__c , turnover_by_average_shopping_basket__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lift forecast value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>