unpackaged/main/default/objects/membership__c/fields/membership_adjustments_reason__c.field-meta.xml
<CustomField>
    <fullName>membership_adjustments_reason__c</fullName>
    <label>Lift Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>PACKAGE_DOWNGRADE</fullName>
                <label>Package downgrade</label>
            </value>
            <value>
                <fullName>COSTS_ANALYSIS</fullName>
                <label>Post calculation</label>
            </value>
            <value>
                <fullName>TURNOVER_DOWNGRADE</fullName>
                <label>Turnover downgrade</label>
            </value>
            <value>
                <fullName>UPGRADE</fullName>
                <label>Upgrade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>