unpackaged/main/default/objects/membership__c/fields/membership_package__c.field-meta.xml
<CustomField>
    <fullName>membership_package__c</fullName>
    <label>Membership Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>PRIME_ISIS</fullName>
                <label>12-MONTHS ISIS TRIAL</label>
            </value>
            <value>
                <fullName>PRIME_TRIAL</fullName>
                <label>6-MONTHS TRIAL</label>
            </value>
            <value>
                <fullName>ENTERPRISE_HOME</fullName>
                <label>ENTERPRISE</label>
            </value>
            <value>
                <fullName>EXCELLENCE</fullName>
            </value>
            <value>
                <fullName>INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>PREMIUM</fullName>
            </value>
            <value>
                <fullName>PREMIUM_FR</fullName>
            </value>
            <value>
                <fullName>PREMIUM_HOME</fullName>
            </value>
            <value>
                <fullName>PREMIUM_PL</fullName>
            </value>
            <value>
                <fullName>PREMIUM_UK</fullName>
            </value>
            <value>
                <fullName>RATING_STANDALONE</fullName>
                <label>PREMIUM (RATING_STANDALONE)</label>
            </value>
            <value>
                <fullName>PRIME_FULL</fullName>
            </value>
            <value>
                <fullName>PRIME_TIME</fullName>
            </value>
            <value>
                <fullName>PRO</fullName>
            </value>
            <value>
                <fullName>PRO_FR</fullName>
            </value>
            <value>
                <fullName>PRO_HOME</fullName>
            </value>
            <value>
                <fullName>PRO_PL</fullName>
            </value>
            <value>
                <fullName>PRO_UK</fullName>
            </value>
            <value>
                <fullName>START</fullName>
            </value>
            <value>
                <fullName>START_FR</fullName>
            </value>
            <value>
                <fullName>START_HOME</fullName>
            </value>
            <value>
                <fullName>START_PL</fullName>
            </value>
            <value>
                <fullName>START_UK</fullName>
            </value>
            <value>
                <fullName>UNDEFINED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>