unpackaged/main/default/objects/membership__c/fields/momentary_prime_monthly_price__c.field-meta.xml
<CustomField>
    <fullName>momentary_prime_monthly_price__c</fullName>
    <inlineHelpText>w/o yearly and bvh discount</inlineHelpText>
    <label>Momentary Prime Monthly Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>