unpackaged/main/default/objects/membership__c/fields/monthly_payment__c.field-meta.xml
<CustomField>
    <fullName>monthly_payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Payment</label>
    <type>Checkbox</type>
</CustomField>