unpackaged/main/default/objects/membership__c/fields/onboarding_responsible__c.field-meta.xml
<CustomField>
    <fullName>onboarding_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>