unpackaged/main/default/objects/membership__c/fields/Percentage_Lift__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Lift__c</fullName>
    <formula>Lift_forecast_value__c  / expected_turnover__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Lift</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>