unpackaged/main/default/objects/membership__c/fields/Prime_yearly_price__c.field-meta.xml
<CustomField>
    <fullName>Prime_yearly_price__c</fullName>
    <formula>momentary_prime_monthly_price__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prime yearly price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>