unpackaged/main/default/objects/membership__c/fields/Sales_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Sales_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResponsibleMemberships</relationshipName>
    <type>Lookup</type>
</CustomField>