unpackaged/main/default/objects/membership__c/fields/Sales_Team_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Reporting__c</fullName>
    <formula>CASE( Sales_Responsible__r.Alias , 
&quot;truhsc&quot;, &quot;DACH 1&quot;, 
&quot;trusei&quot;, &quot;DACH 2&quot;, 
&quot;truoen&quot;, &quot;DACH 2&quot;, 
&quot;hgöke&quot;, &quot;DACH KA&quot;, 
&quot;trubda&quot;, &quot;DACH KA&quot;,
&quot;trudch&quot;, &quot;FR&quot;, 
&quot;trubbr&quot;, &quot;UK&quot;, 
&quot;thein&quot;, &quot;NL&quot;, 
&quot;trujvi&quot;, &quot;ES&quot;, 
&quot;trugpa&quot;, &quot;FR&quot;, 
&quot;arak&quot;, &quot;PL&quot;, 
&quot;&quot;, &quot;WEB&quot;, 
CASE( Sales_Responsible__r.Manager.Alias , 
&quot;truhsc&quot;, &quot;DACH 1&quot;, 
&quot;trusei&quot;, &quot;DACH 2&quot;, 
&quot;truoen&quot;, &quot;DACH 2&quot;, 
&quot;hgöke&quot;, &quot;DACH KA&quot;, 
&quot;trubbr&quot;, &quot;UK&quot;, 
&quot;thein&quot;, &quot;NL&quot;, 
&quot;trudch&quot;, &quot;FR&quot;,
&quot;trujvi&quot;, &quot;ES&quot;, 
&quot;trugpa&quot;, &quot;FR&quot;, 
&quot;arak&quot;, &quot;PL&quot;, 
&quot;WEB&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Team Reporting</label>
    <type>Text</type>
</CustomField>