unpackaged/main/default/objects/membership__c/fields/send_reminder_mail__c.field-meta.xml
<CustomField>
    <fullName>send_reminder_mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send reminder mail</label>
    <type>Checkbox</type>
</CustomField>