unpackaged/main/default/objects/membership__c/fields/setup_fee__c.field-meta.xml
<CustomField>
    <fullName>setup_fee__c</fullName>
    <label>Setup Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>