unpackaged/main/default/objects/membership__c/fields/shops_in_membership__c.field-meta.xml
<CustomField>
    <fullName>shops_in_membership__c</fullName>
    <label>Shops in Membership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>