unpackaged/main/default/objects/membership__c/fields/should_be_lifted__c.field-meta.xml
<CustomField>
    <fullName>should_be_lifted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Should Be Lifted</label>
    <type>Checkbox</type>
</CustomField>