unpackaged/main/default/objects/membership__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>Membership State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>