unpackaged/main/default/objects/membership__c/fields/termination_at__c.field-meta.xml
<CustomField>
    <fullName>termination_at__c</fullName>
    <label>Termination at</label>
    <type>DateTime</type>
</CustomField>