unpackaged/main/default/objects/membership__c/fields/termination_by__c.field-meta.xml
<CustomField>
    <fullName>termination_by__c</fullName>
    <label>Termination By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BUYER</fullName>
                <label>Consumer</label>
            </value>
            <value>
                <fullName>PARTNER</fullName>
                <label>Partner</label>
            </value>
            <value>
                <fullName>SHOPKEEPER</fullName>
                <label>Shopbetreiber</label>
            </value>
            <value>
                <fullName>TS</fullName>
                <label>Trusted Shops</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>