unpackaged/main/default/objects/membership__c/fields/termination_on__c.field-meta.xml
<CustomField>
    <fullName>termination_on__c</fullName>
    <label>Terminated on</label>
    <type>DateTime</type>
</CustomField>