unpackaged/main/default/objects/membership__c/fields/termination_reasons_list__c.field-meta.xml
<CustomField>
    <fullName>termination_reasons_list__c</fullName>
    <label>Termination Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BYMEMBER_EINS_UND_EINS_INPUT</fullName>
                <label>1&amp;1 Input</label>
            </value>
            <value>
                <fullName>BYTS_INITIAL_RISK_NEGATIV</fullName>
                <label>Adverse outcome from initial risk assessment</label>
            </value>
            <value>
                <fullName>BYTS_1_CANCELLATION_AMENDED_CONDITIONS</fullName>
                <label>Amended conditions</label>
            </value>
            <value>
                <fullName>BYSHOP_6_ASSESSMENT_MONITORING</fullName>
                <label>Assessment/Monitoring</label>
            </value>
            <value>
                <fullName>BYTS_NOT_CERTIFIABLE</fullName>
                <label>Business model not eligible for certification</label>
            </value>
            <value>
                <fullName>BYSHOP_AMB_CHANGES</fullName>
                <label>Cancellation due to change in General Membership Terms and Conditions</label>
            </value>
            <value>
                <fullName>BYSHOP_PRICE_RISE</fullName>
                <label>Cancellation due to price increase (retrospective calculation)</label>
            </value>
            <value>
                <fullName>BYSHOP_COST_REDUCTION</fullName>
                <label>Cancellation to reduce costs</label>
            </value>
            <value>
                <fullName>BYTS_TECHN_NOT_POSSIBLE</fullName>
                <label>Certification by TS not possible for technical reasons</label>
            </value>
            <value>
                <fullName>BYSHOP_WANT_PRIMETIME</fullName>
                <label>Changing to Prime-Time</label>
            </value>
            <value>
                <fullName>BYSHOP_4_COST_REDUCTION</fullName>
                <label>Cost reduction</label>
            </value>
            <value>
                <fullName>COSTS_ANALYSIS</fullName>
                <label>Costs analysis</label>
            </value>
            <value>
                <fullName>BYSHOP_5_SERVICE</fullName>
                <label>Customer service</label>
            </value>
            <value>
                <fullName>PERMANENT_PAYMENT_DELAY</fullName>
                <label>Dauerhafter Zahlungsverzug</label>
            </value>
            <value>
                <fullName>BYTS_BUSI_POL_DECISION</fullName>
                <label>Decision arising from company policy</label>
            </value>
            <value>
                <fullName>BYTS_7_END_OF_MEMBERSHIP_TRIAL</fullName>
                <label>End of Membership-Trial</label>
            </value>
            <value>
                <fullName>EXPECTIONS_NOT_FULFILLED</fullName>
                <label>Erwartung Umsatzsteigerung nicht erfüllt</label>
            </value>
            <value>
                <fullName>BYSHOP_3_EXPECTATIONS</fullName>
                <label>Expectations not fulfilled</label>
            </value>
            <value>
                <fullName>BYSHOP_EXP_SALES_INCREASE</fullName>
                <label>Expectations of TS product not met / increase in sales</label>
            </value>
            <value>
                <fullName>BYSHOP_EXP_OTHER</fullName>
                <label>Expectations of TS product not met / other</label>
            </value>
            <value>
                <fullName>BYSHOP_EXP_SEO</fullName>
                <label>Expectations of TS product not met / SEO</label>
            </value>
            <value>
                <fullName>BYTS_SOLVENCY_NEGATIV</fullName>
                <label>Fall in creditworthiness / uncreditworthy</label>
            </value>
            <value>
                <fullName>NO_LIMIT_POSSIBLE</fullName>
                <label>fehlende Bonität / keine Limitvergabe möglich</label>
            </value>
            <value>
                <fullName>BYTS_GUARANTEE_FACILITY</fullName>
                <label>Guarantee framework/Solvency</label>
            </value>
            <value>
                <fullName>BYTS_2_GUARANTEE_FRAMEWORK_SOLVENCY</fullName>
                <label>Guarantee framework/Solvency (BYTS2)</label>
            </value>
            <value>
                <fullName>INSOLVENT</fullName>
                <label>Insolvency</label>
            </value>
            <value>
                <fullName>BYTS_INSOLVENCY</fullName>
                <label>Insolvency/bankruptcy</label>
            </value>
            <value>
                <fullName>BYTS_3_INSOLVENCY</fullName>
                <label>Insolvency (BYTS3)</label>
            </value>
            <value>
                <fullName>CANCELLATION_DUE_TO_COSTS</fullName>
                <label>Kündigung wg. Kostenreduzierung</label>
            </value>
            <value>
                <fullName>CANCELLATION_RAISING_COSTS</fullName>
                <label>Kündigung wg. Preiserhöhung</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>