unpackaged/main/default/objects/membership__c/fields/tmp_Correct_Currency__c.field-meta.xml
<CustomField>
    <fullName>tmp_Correct_Currency__c</fullName>
    <formula>TEXT(CurrencyIsoCode) =  currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tmp_Correct Currency</label>
    <type>Checkbox</type>
</CustomField>