unpackaged/main/default/objects/membership__c/fields/transaction_volume_protections_per_year__c.field-meta.xml
<CustomField>
    <fullName>transaction_volume_protections_per_year__c</fullName>
    <label>Transaction Volume Protections Per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>