unpackaged/main/default/objects/membership__c/fields/Transfer_Message__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Message__c</fullName>
    <label>Transfer-Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>