unpackaged/main/default/objects/membership__c/fields/Transfer_Status__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Status__c</fullName>
    <inlineHelpText>Marked for Transfer
|| No Transfer - (no Customer Nr)
|| Transferred successfully - (202 - Accepted)
|| Transfer failed - (400 - Bad Request) &amp; (401 – Unauthorized)
|| Error - unexpected Erros</inlineHelpText>
    <label>Transfer-Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marked for Transfer</fullName>
                <default>true</default>
                <label>Marked for Transfer</label>
            </value>
            <value>
                <fullName>Transferred successfully</fullName>
            </value>
            <value>
                <fullName>Transfer failed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>No Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>