unpackaged/main/default/objects/membership__c/fields/tsMembershipId__c.field-meta.xml
<CustomField>
    <fullName>tsMembershipId__c</fullName>
    <externalId>true</externalId>
    <label>tsMembershipId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>