unpackaged/main/default/objects/membership__c/fields/turnover_by_average_shopping_basket__c.field-meta.xml
<CustomField>
    <fullName>turnover_by_average_shopping_basket__c</fullName>
    <label>Turnover By Average Shopping Basket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>