unpackaged/main/default/objects/membership__c/fields/turnover_by_transaction_volume__c.field-meta.xml
<CustomField>
    <fullName>turnover_by_transaction_volume__c</fullName>
    <label>Turnover By Transaction Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>