unpackaged/main/default/objects/membership__c/fields/valid_from__c.field-meta.xml
<CustomField>
    <fullName>valid_from__c</fullName>
    <label>Valid from</label>
    <type>Date</type>
</CustomField>