unpackaged/main/default/objects/membership__c/fields/valid_to__c.field-meta.xml
<CustomField>
    <fullName>valid_to__c</fullName>
    <label>Valid to</label>
    <type>Date</type>
</CustomField>