unpackaged/main/default/objects/membership__c/fields/Zuora_Contract_Value_without_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Contract_Value_without_Discounts__c</fullName>
    <label>Zuora Contract Value without Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>