unpackaged/main/default/objects/membership__c/fields/Zuora_Expected_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Expected_Turnover__c</fullName>
    <label>Zuora Expected Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>