unpackaged/main/default/objects/membership__c/fields/Zuora_is_Active__c.field-meta.xml
<CustomField>
    <fullName>Zuora_is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zuora is Active</label>
    <type>Checkbox</type>
</CustomField>